# dcms

./: .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  README.md  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  setup.sh
ci-templates/: python-lint.yaml  python-package.yaml  python-pages.yaml  python-test.yaml
docs/: Makefile  conf.py  index.rst  installation.rst
eventclf/: MANIFEST.in  PKG-INFO  README.md  requirements.txt  setup.py  test.py
eventclf/eventclf/v1/: classifier_benchmark.py  evaluate_features.py  evaluate_models.py  feature_extraction.py
eventclf/eventclf/v2/data_processing/: data_processing.py
eventclf/eventclf/v2/models/: __init__.py  event_gradient_boosting_classifier.py  event_setfit.py
eventclf/eventclf/v2/models/event_llm/: event_llm.py  prompts.py
location_data/: README.md  pyproject.toml
location_data/src/.ipynb_checkpoints/: test-checkpoint.ipynb
location_data/src/location_data/.ipynb_checkpoints/: test-checkpoint.ipynb
location_data/src/location_data/analysis/: analysis.py
location_data/src/location_data/data_processing/: alva.py  data_processing.py  huq.py
location_data/src/location_data/models/: location_data_model.py
location_data/src/location_data/plots/: plots.py
notebooks/eventclf/: GB_experiment.ipynb  LLM Experiment.ipynb
pipelines/pulsar/: clean_pulsar_data.py  pulsar_config_template.json  pulsar_pipeline.py  requirements.txt  utils.py
src/dcms_engagement/: skeleton.py
strava/: test.py
tests/: test_skeleton.py
