[metadata]
name = dcms_engagement
description = Assess unticketed attendance and engagement with sport and cultural events and spaces
author = Faculty
author-email = info@faculty.ai
url = https://faculty.ai/

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires = setuptools_scm
package_dir =
    =src
# Add here dependencies of your project (semicolon/line-separated), e.g.
# install_requires =
#     pandas
#     scikit-learn


[options.packages.find]
where = src
exclude =
    tests

# Additional install requirements for running tests
[options.extras_require]
testing =
    pytest
    pytest-cov
linting =
    black==22.3.0
    isort==5.9.2
    flake8==3.8.4

[tool:pytest]
# Options for py.test:
addopts =
    --cov dcms_engagement --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[tool.setuptools_scm]
version_scheme = guess-next-dev

[bdist_wheel]
universal = 1

[flake8]
ignore = E203 W503 W291 W293
max-line-length = 79
exclude =
    .tox
    dist
    .eggs
