[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=6.2"]

[project]
name = "location_data"
version = "0.1.0"
description = "Package to estimate event attendance using location data from HUQ"
authors = [{ name = "University of Glasgow" }]
dependencies = [
    "pandas==1.5.1",
    "geopandas==1.0.1",
    "matplotlib==3.5.3",
    "seaborn==0.12.1",
    "scikit-learn==1.0.2",
    "odfpy==1.4.1",
    "xgboost==2.1.4",
    "rapidfuzz"
]
